--- a/MyApp/angular.json
+++ b/MyApp/angular.json
@@ -28,8 +28,13 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              
+              "node_modules/popper.js/dist/umd/popper.min.js", 
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
